--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -9,15 +9,16 @@
 </head>
 <body>
   <header class="page-header">
-    <div class="container">
-      <div class="nav">
+    <div class="nav  nav--closed  nav--nojs">
+      <button class="nav__toggle" type="button">Открыть меню</button>
+      <div class="container">
         <div class="nav__left">
-          <a href="#">Start</a>
-          <a href="#">News</a>
-          <a href="#">Pool</a>
-          <a href="#">Cloud</a>
-          <a href="#">Software</a>
-          <a href="#">Hardware</a>
+          <a class="nav__item" href="#">Start</a>
+          <a class="nav__item" href="#">News</a>
+          <a class="nav__item" href="#">Pool</a>
+          <a class="nav__item" href="#">Cloud</a>
+          <a class="nav__item" href="#">Software</a>
+          <a class="nav__item" href="#">Hardware</a>
         </div>
         <div class="nav__right">
           <div class="nav__language">
@@ -28,6 +29,7 @@
           <a href="#">Join Us</a>
         </div>
       </div>
+    </div>
       <div class="page-header__title">
         <h1>CRYPTOMINER.COM</h1>
         <b>WE MINE SINCE 1812</b>
@@ -341,5 +343,6 @@
       <p class="padding-bottom">Additionally, the miner is awarded the fees paid by users sending transactions. The fee is an incentive for the miner to include the transaction in their block. In the future, as the number of new bitcoins miners are allowed to create in each block dwindles, the fees will make up a much more important percentage of mining income.</p>
     </div>
   </section>
+  <script src="js/script.js"></script>
 </body>
 </html>
