--- a/assets/templates/miner/sass/blocks/proof.scss
+++ b/assets/templates/miner/sass/blocks/proof.scss
@@ -64,4 +64,18 @@
 }
 
 @media screen and ($mobile-widths) {
+  .proof__flex {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .proof__box {
+    margin-bottom: 50px;
+  }
+  
+  .proof__resume {
+    padding-bottom: 30px;
+    font-size: 20px;
+  }
 }
