--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -9,27 +9,30 @@
 </head>
 <body>
   <header class="page-header">
-    <div class="nav  nav--closed  nav--nojs">
-      <button class="nav__toggle" type="button">Открыть меню</button>
-      <div class="container">
-        <div class="nav__left">
-          <a class="nav__item" href="#">Start</a>
-          <a class="nav__item" href="#">News</a>
-          <a class="nav__item" href="#">Pool</a>
-          <a class="nav__item" href="#">Cloud</a>
-          <a class="nav__item" href="#">Software</a>
-          <a class="nav__item" href="#">Hardware</a>
-        </div>
-        <div class="nav__right">
-          <div class="nav__language">
-            <a href="#">RU </a>/
-            <a href="#">EN</a>
+    <div class="container">
+      <div class="nav  nav--closed  nav--nojs">
+        <button class="nav__toggle" type="button">Открыть меню</button>
+        <div class="container">
+          <div class="nav__flex">
+            <div class="nav__left">
+              <a class="nav__item" href="#">Start</a>
+              <a class="nav__item" href="#">News</a>
+              <a class="nav__item" href="#">Pool</a>
+              <a class="nav__item" href="#">Cloud</a>
+              <a class="nav__item" href="#">Software</a>
+              <a class="nav__item" href="#">Hardware</a>
+            </div>
+            <div class="nav__right">
+              <div class="nav__language">
+                <a href="#">RU </a>/
+                <a href="#">EN</a>
+              </div>
+              <a href="#">Log In</a>
+              <a href="#">Join Us</a>
+            </div>
           </div>
-          <a href="#">Log In</a>
-          <a href="#">Join Us</a>
         </div>
       </div>
-    </div>
       <div class="page-header__title">
         <h1>CRYPTOMINER.COM</h1>
         <b>WE MINE SINCE 1812</b>
