--- a/assets/templates/miner/sass/blocks/diff.scss
+++ b/assets/templates/miner/sass/blocks/diff.scss
@@ -48,7 +48,8 @@
     align-items: center;
   }
   
-  .diff__up {
-    margin-bottom: 40px;
+  .diff__up,
+  .diff__down {
+    display: none;
   }
 }
