--- a/assets/templates/miner/sass/blocks/proof.scss
+++ b/assets/templates/miner/sass/blocks/proof.scss
@@ -74,6 +74,12 @@
     margin-bottom: 50px;
   }
   
+  .proof__right {
+    padding-left: 0;
+    text-align: center;
+    background: none;
+  }
+  
   .proof__resume {
     padding-bottom: 30px;
     font-size: 20px;
