--- a/assets/templates/miner/sass/blocks/edge.scss
+++ b/assets/templates/miner/sass/blocks/edge.scss
@@ -18,11 +18,6 @@
 
 @media screen and ($mobile-widths) {
   .edge {
-    min-height: 1400px;
-    margin-top: -200px;
-    
-    & img {
-      padding-top: 500px;
-    }
+    display: none;
   }
 }
