--- a/assets/templates/miner/sass/blocks/rewards.scss
+++ b/assets/templates/miner/sass/blocks/rewards.scss
@@ -22,10 +22,6 @@
 
 @media screen and ($mobile-widths) {
   .rewards {
-    min-height: 1000px;
-    
-    & p {
-      padding-top: 70px;
-    }
+    display: none;
   }
 }
