--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -346,6 +346,6 @@
       <p class="padding-bottom">Additionally, the miner is awarded the fees paid by users sending transactions. The fee is an incentive for the miner to include the transaction in their block. In the future, as the number of new bitcoins miners are allowed to create in each block dwindles, the fees will make up a much more important percentage of mining income.</p>
     </div>
   </section>
-  <script src="js/script.js"></script>
+  <script async src="js/script.js"></script>
 </body>
 </html>
