--- a/assets/templates/crypto/index.html
+++ b/assets/templates/crypto/index.html
@@ -178,8 +178,10 @@
           <b>About</b>
           <ul>
             <li><a href="template/about.html">About Us</a></li>
-            <li><a href="template/contact.html">Contact</a></li>
-            <li><a href="template/support.html">Support</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Press</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Security</a></li>
           </ul>
         </div>
         <div class="page-footer__column">
@@ -188,6 +190,7 @@
             <li><a href="template/faq.html">FAQ</a></li>
             <li><a href="template/legal.html">Legal & Privacy</a></li>
             <li><a href="template/terms.html">Terms & Conditions</a></li>
+            <li><a href="template/support.html">Support</a></li>
             <!-- <li><a href="template/trading.html">Trading Guide</a></li> -->
             <!-- <li><a href="template/disclaimer.html">Disclaimer</a></li> -->
           </ul>
