--- a/assets/templates/forex/sass/blocks/scroll.scss
+++ b/assets/templates/forex/sass/blocks/scroll.scss
@@ -7,7 +7,7 @@
 
 .scroll__second {
   min-height: 470px;
-  background: url("../img/scroll-s.png") no-repeat top;
+  background: url("../img/scroll-s-n.png") no-repeat top;
   background-size: cover;
   background-attachment: fixed;
 }
