--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -281,7 +281,7 @@
     </div>
   </section>
   <section class="edge">
-    <img src="img/edge-img-n.png" alt="">
+    <img src="img/edge-img.png" alt="">
   </section>
   <section class="cloud">
     <div class="container">
