--- a/assets/templates/miner/sass/blocks/mining-sub.scss
+++ b/assets/templates/miner/sass/blocks/mining-sub.scss
@@ -1,7 +1,7 @@
 .mining-sub {
   
   & p {
-    font-size: 25px;
+    font-size: 20px;
     font-weight: bold;
     text-align: center;
     text-transform: uppercase;
@@ -10,19 +10,18 @@
 
 .mining-sub__flex {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-top: 50px;
   padding-bottom: 50px;
 }
 
 .mining-sub__left {
-  padding-bottom: 250px;
+  height: 300px;
   background: url('../img/mining-left.png') no-repeat bottom;
 }
 
 .mining-sub__right {
-  width: 300px;
-  padding-bottom: 250px;
+  width: 230px;
   background: url('../img/mining-right.png') no-repeat bottom;
 }
 
