--- a/assets/templates/miner/sass/blocks/proof.scss
+++ b/assets/templates/miner/sass/blocks/proof.scss
@@ -5,21 +5,21 @@
 }
 
 .proof__left {
+  padding: 40px;
   color: #fff;
-  font-size: 45px;
+  font-size: 40px;
   font-weight: bold;
   background: #000;
   
   & p {
     margin: 0;
-    padding: 40px;
   }
 }
 
 .proof__right {
   padding-top: 20px;
   padding-left: 200px;
-  font-size: 30px;
+  font-size: 25px;
   font-weight: bold;
   text-transform: uppercase;
   background: url('../img/proof-power.png') no-repeat left;
@@ -29,7 +29,8 @@
   padding-top: 170px;
   width: 170px;
   // height: 155px;
-  font-size: 25px;
+  font-size: 20px;
+  font-weight: bold;
   text-align: center;
   text-transform: uppercase;
 }
@@ -49,8 +50,8 @@
 }
 
 .proof__resume {
-  padding-bottom: 90px;
-  font-size: 30px;
+  padding-bottom: 40px;
+  font-size: 20px;
   text-align: center;
 }
 
