--- a/assets/templates/miner/sass/blocks/cloud.scss
+++ b/assets/templates/miner/sass/blocks/cloud.scss
@@ -47,6 +47,7 @@
     flex-direction: column;
     text-align: center;
     justify-content: center;
+    margin-top: 140px;
     padding-top: 130px;
   }
   
