--- a/assets/templates/miner/sass/blocks/mining-sub.scss
+++ b/assets/templates/miner/sass/blocks/mining-sub.scss
@@ -43,9 +43,18 @@
   .mining-sub__flex {
     align-items: center;
     flex-direction: column;
+    
+    & p {
+      font-size: 16px;
+    }
   }
   
   .mining-sub__left {
+    height: 340px; 
     margin-bottom: 50px;
+  }
+  
+  .mining-sub__right {
+    padding-bottom: 180px;
   }
 }
