--- a/assets/templates/crypto-b/sass/blocks/page-footer.scss
+++ b/assets/templates/crypto-b/sass/blocks/page-footer.scss
@@ -34,11 +34,10 @@
   padding-bottom: 15px;
 }
 
-.page-footer__select {
-  padding: 5px;
-  margin-top: 20px;
-  width: 200px;
-  border-radius: 5px;
+.page-footer__copyright {
+  margin: 0;
+  padding-bottom: 50px;
+  color: #949494;
 }
 
 // Media
