--- a/assets/templates/crypto/template/legal.html
+++ b/assets/templates/crypto/template/legal.html
@@ -90,8 +90,10 @@
           <b>About</b>
           <ul>
             <li><a href="about.html">About Us</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Press</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="support.html">Support</a></li>
+            <li><a href="#">Security</a></li>
           </ul>
         </div>
         <div class="page-footer__column">
@@ -100,7 +102,9 @@
             <li><a href="faq.html">FAQ</a></li>
             <li><a class="page-footer--active">Legal & Privacy</a></li>
             <li><a href="terms.html">Terms & Conditions</a></li>
-            <!-- <li><a href="trading.html">Trading Guide</a></li> -->
+            <li><a href="support.html">Support</a></li>
+            <!-- <li><a href="template/trading.html">Trading Guide</a></li> -->
+            <!-- <li><a href="template/disclaimer.html">Disclaimer</a></li> -->
           </ul>
         </div>
       </div>
