--- a/assets/templates/crypto-b/css/style.css
+++ b/assets/templates/crypto-b/css/style.css
@@ -1211,11 +1211,10 @@ form a {
 .page-footer__column li {
   padding-bottom: 15px; }
 
-.page-footer__select {
-  padding: 5px;
-  margin-top: 20px;
-  width: 200px;
-  border-radius: 5px; }
+.page-footer__copyright {
+  margin: 0;
+  padding-bottom: 50px;
+  color: #949494; }
 
 /* Smartphones (вертикальная и горизонтальная ориентация) ----------- */
 @media only screen and (min-width: 320px) and (max-width: 480px) {
