--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -141,9 +141,9 @@
           <b>About</b>
           <ul>
             <li><a href="templates/about.html">About Us</a></li>
-            <li><a href="templates/contact.html">Contact</a></li>
+            <li><a href="#">Careers</a></li>
             <li><a href="#">Press</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="templates/contact.html">Contact</a></li>
             <li><a href="#">Security</a></li>  
           </ul>
         </div>
