--- a/assets/templates/crypto-b/templates/registration.html
+++ b/assets/templates/crypto-b/templates/registration.html
@@ -11,7 +11,7 @@
 <body>
   <header class="page-header  page-header--blue">
     <div class="page-header__head">
-      <nav class="page-header__nav">
+      <nav class="page-header__nav  page-header__nav--form">
         <div class="container">
           <div class="page-header__flex  page-header__flex--center">
             <div class="page-header__logo">
