--- a/assets/templates/crypto-b/templates/terms.html
+++ b/assets/templates/crypto-b/templates/terms.html
@@ -120,20 +120,25 @@
           <b>About</b>
           <ul>
             <li><a href="about.html">About Us</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Press</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="privacy.html">Legal & Privacy</a></li>
-            <li class="page-footer--active"><a>Terms & Conditions</a></li>
+            <li><a href="#">Security</a></li>  
           </ul>
         </div>
         <div class="page-footer__column">
           <b>Resources</b>
           <ul>
             <li><a href="faq.html">FAQ</a></li>
+            <li><a href="privacy.html">Legal & Privacy</a></li>
+            <li class="page-footer--active"><a>Terms & Conditions</a></li>
             <li><a href="#">Support</a></li>
-            <li><a href="trading.html">Trading Guide</a></li>
+            <!-- <li><a href="templates/trading.html">Trading Guide</a></li> -->
           </ul>
         </div>
       </div>
+      <p class="page-footer__copyright">© Copyright 2017 Cryptologi, All right reserved. Cryptologi is a property of GRANIT OAK WORLDWIDE LIMITED: Igoumenitsas 12, , 2027 Nicosia, Cyprus. Operational address: Igoumenitsas 12, , 2027 Nicosia, Cyprus<br><br>Criptologi is a software platform ONLY and does not conduct any independent diligence on or substantive review of any blockchain asset, digital currency, cryptocurrency or associated funds. You are fully and solely responsible for evaluating your investments, for determining whether you will exchange blockchain assets based on your own, and for all your decisions as to whether to exchange blockchain assets with Exodus. In many cases, blockchain assets you exchange on the basis of your research may not increase in value, and may decrease in value. Similarly, blockchain assets you exchange on the basis of your research may increase in value after your exchange.
+Past performance is not indicative of future results. Any investment in blockchain assets involves the risk of loss of part or all of your investment. The value of the blockchain assets you exchange is subject to market and other investment risks.</p>
     </div>
   </footer>
 </body>
