--- a/assets/templates/miner/css/style.css
+++ b/assets/templates/miner/css/style.css
@@ -604,7 +604,7 @@ body {
   padding-bottom: 70px; }
 
 .proof__left {
-  padding: 40px;
+  padding: 20px 40px;
   color: #fff;
   font-size: 40px;
   font-weight: bold;
@@ -614,8 +614,8 @@ body {
 
 .proof__right {
   padding-top: 20px;
-  padding-left: 200px;
-  font-size: 25px;
+  padding-left: 150px;
+  font-size: 20px;
   font-weight: bold;
   text-transform: uppercase;
   background: url("../img/proof-power.png") no-repeat left; }
@@ -642,6 +642,7 @@ body {
 .proof__resume {
   padding-bottom: 40px;
   font-size: 20px;
+  font-weight: bold;
   text-align: center; }
 
 @media screen and (max-width: 1200px) {
