--- a/assets/templates/forex/sass/blocks/slider.scss
+++ b/assets/templates/forex/sass/blocks/slider.scss
@@ -34,6 +34,11 @@
   background-size: cover;
 }
 
+.slider__slide--four {
+  background: url('../img/slider-a.png') no-repeat center;
+  background-size: cover;
+}
+
 .slick-dots {
   bottom: 20px;
 }
